<resources>
    <string name="app_name">Park Smart</string>

    <!--Joseph's Strings  -->
    <string name="nav_home">Home</string>
    <string name="nav_schedule">Schedule</string>
    <string name="nav_direction">Direction</string>
    <string name="nav_availability">Availability</string>
    <string name="gate_control_heading">Gate Control</string>
    <string name="entry_gate">Entry Gate</string>
    <string name="exit_gate">Exit Gate</string>
    <string name="open_gate">Open</string>
    <string name="close_gate">Close</string>
    <string name="entry_gate_is_currently_closed">Entry Gate is currently:</string>
    <string name="exit_gate_is_currently_closed">Exit Gate is currently: </string>
    <string name="open">OPEN</string>
    <string name="close">CLOSE</string>
    <string name="DialogExitMsg">Do you want to Exit?</string>
    <string name="DialogYes">Yes</string>
    <string name="DialogNo">No</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!--Jerin's Strings   -->
    <string name="lightControl">Light Control</string>
    <string name="entryLight">Entry Light</string>
    <string name="exitLight">Exit Light</string>
    <string name="on">On</string>
    <string name="off">Off</string>
    <string name="la">Light is Currently: </string>

    <!--Mandeep's Strings  -->
    <string name="editTextTextEmailAddress">Enter email</string>
    <string name="editTextTextPassword">Password</string>
    <string name="signUp">Signup</string>
    <string name="signInButton">Login</string>

    <!--Shared Preference Strings... Do not translate -->
    <string name="checkbox">com.smarttech.parksmart.checkbox</string>
    <string name="user_email">com.smarttech.parksmart.email</string>
    <string name="user_password">com.smarttech.parksmart.password</string>

    <string name="google_button_toast">Sign in with Google Clicked</string>
    <string name="PasswordErr">Incorrect password</string>
    <string name="emailUsrErr">User does not exist</string>
    <string name="checkboxMsg">Remember me</string>


    <!--Vijay's Strings   -->
    <string name="OpTime">Enter</string>
    <string name="end">End</string>
    <string name="start">Start</string>
    <string name="time">Time</string>
    <string name="date">Date</string>
    <string name="setSchedule">Set Schedule</string>
    <string name="day">Day</string>
    <string name="editSchedule">Edit Schedule</string>
    <string name="schedule">Schedule</string>

    <string name="howManyLotsAvailable">Number of Lots Available:</string>>

    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>

    <string name="direction">Direction</string>
    <string name="language">English</string>


    <string-array name="TimeAM">
        <item>12:00 AM</item>
        <item>1:00 AM</item>
        <item>2:00 AM</item>
        <item>3:00 AM</item>
        <item>4:00 AM</item>
        <item>5:00 AM</item>
        <item>6:00 AM</item>
        <item>7:00 AM</item>
        <item>8:00 AM</item>
        <item>9:00 AM</item>
        <item>10:00 AM</item>
        <item>11:00 AM</item>
    </string-array>

    <string-array name="TimePM">
        <item>12:00 PM</item>
        <item>1:00 PM</item>
        <item>2:00 PM</item>
        <item>3:00 PM</item>
        <item>4:00 PM</item>
        <item>5:00 PM</item>
        <item>6:00 PM</item>
        <item>7:00 PM</item>
        <item>8:00 PM</item>
        <item>9:00 PM</item>
        <item>10:00 PM</item>
        <item>11:00 PM</item>

    </string-array>

    <string-array name="Week">
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
        <item>Sunday</item>
    </string-array>


    <!-- Needs editing -->

    <string name="action_sign_in_short">REGISTER</string>
    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Not a member? Register here!</string>
    <string name="btn_link_to_login">Already registered? Login here!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">RESET PASSWORD</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
    <string name="settings_name">Account Settings</string>
    <string name="DialogDeleteMsg">Are you sure you want to delete account?</string>
    <string name="notif_channel_id">smarttech.parksmart.services.test</string>
    <string name="empty_email_err">Enter email address!</string>
    <string name="enter_password_err">Enter password!</string>
    <string name="google_signin_success">Google Sign In Successful</string>
    <string name="auth_failed_msg">Authentication Failed</string>
    <string name="emailName_update_successful">Email address and Name is updated</string>
    <string name="invalid_email_msg">Invalid email address</string>
    <string name="name_updated_msg">Name is updated</string>
    <string name="reset_email_err_msg">Enter your registered email id</string>
    <string name="pass_reset_email_msg">We have sent you an email to reset your password!</string>
    <string name="failed_pass_reset_email">Failed to send reset email!</string>
    <string name="password_updated_msg">Password updated</string>
    <string name="error_pass_msg_settings">Unsuccessful, check old password</string>
    <string name="incorret_oldPass_settings_err">Incorrect old password OR signed in with G-mail</string>
    <string name="unmatch_pass_err">New passwords do not match!</string>
    <string name="pass_requirement_msg">Password must be more than 6 letters and Old password cannot equal New password!</string>
    <string name="profile_deleted_msg">Your profile is deleted:( Create a account now!</string>
    <string name="profile_delete_fail_msg">Failed to delete your account!</string>
    <string name="pass_short_error">Password too short, enter minimum 6 characters!</string>
    <string name="used_email_error">Auth Failed: Email address is already in use by another account.</string>
    <string name="announcements_heading">Announcements</string>
    <string name="name_heading">Name</string>
    <string name="enter_name_hint">Enter Name</string>
    <string name="email_heading">Email</string>
    <string name="enter_email_hint">Enter Email</string>
    <string name="google_email_change_err">*Unable to update email. Signed in with google account.</string>
    <string name="save_btnText">Save</string>
    <string name="general_heading">General</string>
    <string name="night_mode_heading">Night Mode</string>
    <string name="night_mode">Night Mode</string>
    <string name="notifications_heading">Notifications</string>
    <string name="push_notifications">Push Notifications</string>
    <string name="account_settings_heading">Account Settings</string>
    <string name="old_password_hint">Old Password</string>
    <string name="new_password_hint">New Password</string>
    <string name="confirm_new_password_hint">Confirm New Password</string>
    <string name="confirm_btnText">Confirm</string>
    <string name="cancel_btnText">Cancel</string>
    <string name="delete_account_btnText">Delete Account</string>
    <string name="parksmart_gmail_com">parksmart@gmail.com</string>
    <string name="park_smart_nav_name">Park Smart</string>
    <string name="welcome_nav_msg">Welcome,</string>
    <string name="userimg">userImg</string>
    <string name="profile_nav_menu">Profile</string>
    <string name="gate_control_nav_menu">Gate Control</string>
    <string name="light_control_nav_menu">Light Control</string>
    <string name="settings_nav_menu">Settings</string>
    <string name="logout_nav_menu">Logout</string>

</resources>