<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/settingswhite"
    android:orientation="vertical"
    tools:context=".SettingActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/settingswhite">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:id="@+id/GeneralTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50sp"
                android:background="@color/colorPink"
                android:text="@string/general_heading"
                android:textColor="@color/blackText"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/NightModeTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5sp"
                android:background="@color/colorTransparentPink"
                android:text="@string/night_mode_heading"
                android:textColor="@color/blackText"
                android:textSize="20sp" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/switchNightMode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="false"
                android:text="@string/night_mode"
                android:textColor="@color/blackText"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/NotificationTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorTransparentPink"
                android:text="@string/notifications_heading"
                android:textColor="@color/blackText"
                android:textSize="20sp" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/switchNotifications"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/push_notifications"
                android:textColor="@color/blackText"
                android:textStyle="bold" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/settingswhite">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:id="@+id/AccountTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5sp"
                android:background="@color/colorPink"
                android:text="@string/account_settings_heading"
                android:textColor="@color/blackText"
                android:textSize="30sp" />

            <Button
                android:id="@+id/changePasswordbtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5sp"
                android:background="@null"
                android:text="@string/change_password"
                android:textColor="@color/blackText" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/inputlayout1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/colorPink"
                android:visibility="gone"
                app:passwordToggleEnabled="true">

                <EditText
                    android:id="@+id/oldPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/old_password_hint"
                    android:importantForAutofill="no"
                    android:inputType="textPassword"
                    android:textColor="@color/colorPink"
                    android:theme="@style/CustomInputStyle" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/inputlayout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/colorPink"
                android:visibility="gone"
                app:passwordToggleEnabled="true">

                <EditText
                    android:id="@+id/newPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/new_password_hint"
                    android:importantForAutofill="no"
                    android:inputType="textPassword"
                    android:textColor="@color/colorPink"
                    android:theme="@style/CustomInputStyle" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/inputlayout3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/colorPink"
                android:visibility="gone"
                app:passwordToggleEnabled="true">

                <EditText
                    android:id="@+id/confirm_newPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/confirm_new_password_hint"
                    android:importantForAutofill="no"
                    android:inputType="textPassword"
                    android:textColor="@color/colorPink"
                    android:theme="@style/CustomInputStyle" />
            </com.google.android.material.textfield.TextInputLayout>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/confirmPassbtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/colorPink"
                    android:text="@string/confirm_btnText"
                    android:textColor="@color/blackText"
                    android:visibility="gone" />

                <Button
                    android:id="@+id/cancelBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:text="@string/cancel_btnText"
                    android:textColor="@color/blackText"
                    android:visibility="gone" />
            </TableRow>

            <Button
                android:id="@+id/deleteAccountbtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5sp"
                android:background="@null"
                android:text="@string/delete_account_btnText"
                android:textColor="@color/colorRed" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>