<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:background="@color/BG_Grey">


    <TextView
        android:id="@+id/SetSchedule"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/setSchedule"
        android:textAlignment="center"
        android:textStyle="bold"
        android:fontFamily="serif-monospace"
        android:textColor="@color/black"
        android:textSize="40sp" />

    <TextView
        android:id="@+id/Date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:layout_marginTop="150dp"/>

    <Spinner
        android:id="@+id/Weekday"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/Week"
        android:layout_marginTop="10dp" />
    <TextView
        android:id="@+id/Time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/time"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:layout_marginTop="30dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/start"/>

        <TextView
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/end"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Spinner
            android:id="@+id/AM_Time"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:entries="@array/TimeAM"
            android:layout_marginTop="10dp"/>

        <Spinner
            android:id="@+id/PM_Time"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:entries="@array/TimePM"
            android:layout_marginTop="10dp" />

    </LinearLayout>

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/OpTime" />
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/navigationView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/colorPrimary"
        app:itemBackground="?selectableItemBackgroundBorderless"
        app:itemHorizontalTranslationEnabled="true"
        app:itemIconTint="@drawable/nav_item_color_state"
        app:itemTextColor="@drawable/nav_item_color_state"
        app:labelVisibilityMode="labeled"
        app:menu="@menu/bottom_nav_menu" />
</RelativeLayout>


</LinearLayout>


